04-CERTMANAGER/test1-deployment.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: test-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx-deploy-main
  namespace: test-web
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-main
  template:
    metadata:
      labels:
        run: nginx-main
    spec:
      containers:
      - image: nginx:latest
        name: nginx
