04-CERTMANAGER/test1-b-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: test-web
spec:
  ingressClassName: nginx
  rules:
  - host: testing-cert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-main
            port:
              number: 80
